--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@antv/g2": "^3.5.9",
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "echarts": "^4.4.0",
+    "element-ui": "^2.12.0",
     "vue": "^2.6.10",
+    "vue-cropper": "^0.4.9",
     "vue-router": "^3.0.3",
+    "vue2-editor": "^2.10.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
